[gd_scene load_steps=14 format=4 uid="uid://1ptksoeppc8j"]

[ext_resource type="Script" path="res://LEVELS/LEVEL_1/little_endian.gd" id="1_j410d"]
[ext_resource type="PackedScene" uid="uid://bhsegbh3s6k8c" path="res://LEVELS/LEVEL_1/tile_map_layer.tscn" id="2_coe6v"]
[ext_resource type="PackedScene" uid="uid://c8svlcdojdv4c" path="res://LEVELS/LEVEL_1/houses.tscn" id="3_vvk7m"]
[ext_resource type="PackedScene" uid="uid://p0ye6xumm1pp" path="res://LEVELS/LEVEL_1/player.tscn" id="4_cwj72"]
[ext_resource type="Script" path="res://LEVELS/LEVEL_1/mite_1.gd" id="4_xjjic"]
[ext_resource type="PackedScene" uid="uid://b44s1rtiwgdje" path="res://LEVELS/LEVEL_1/led.tscn" id="5_61rlc"]
[ext_resource type="PackedScene" uid="uid://xk128etno3lt" path="res://LEVELS/LEVEL_1/scene_transition_rect.tscn" id="6_n14ku"]
[ext_resource type="AudioStream" uid="uid://bdxo41ksxykb" path="res://ASSETS/MUSIC/Little Endian Overworld Theme.mp3" id="7_d6i20"]
[ext_resource type="PackedScene" uid="uid://bpr2g0kiff414" path="res://LEVELS/LEVEL_1/mold_mite.tscn" id="8_47f8w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mvhcb"]
size = Vector2(4, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c8et5"]
size = Vector2(4, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_daanj"]
size = Vector2(4, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_srjm5"]
size = Vector2(4, 2)

[node name="little_endian" type="Node"]
script = ExtResource("1_j410d")

[node name="background" parent="." instance=ExtResource("2_coe6v")]
tile_map_data = PackedByteArray("AAAPABYAAAAHAC0AAAAPABcAAAAHAC0AAAAPABgAAAAHAC0AAAAPABkAAAAHAC0AAAAPABoAAAAHAC4AAAAQABoAAAAIAC4AAAARABoAAAAIAC4AAAASABoAAAAJAC4AAAASABgAAAAJAC0AAAASABcAAAAJAC0AAAASABYAAAAJAC0AAAARABkAAAAIAC0AAAAQABkAAAAIAC0AAAAQABgAAAAIAC0AAAARABgAAAAIAC0AAAARABcAAAAIAC0AAAAQABcAAAAIAC0AAAAQABYAAAAIAC0AAAARABYAAAAIAC0AAAAPABUAAAAHAC0AAAAPABQAAAAHAC0AAAAPABMAAAAHACsAAAAQABMAAAAIACsAAAARABMAAAAIACsAAAASABMAAAAJACsAAAASABUAAAAJAC0AAAAQABQAAAAIACwAAAARABQAAAAIACwAAAARABUAAAAIACwAAAAQABUAAAAIACwAAAAaABMAAAAHACsAAAAaABUAAAAHAC0AAAAaABYAAAAHAC0AAAAaABcAAAAHAC0AAAAaABgAAAAHAC0AAAAaABoAAAAHAC4AAAAbABMAAAAIACsAAAAbABQAAAAIAC0AAAAbABUAAAAIAC0AAAAbABYAAAAIAC0AAAAbABcAAAAIAC0AAAAbABgAAAAIAC0AAAAbABkAAAAIAC0AAAAbABoAAAAIAC4AAAAcABMAAAAIACsAAAAcABQAAAAIAC0AAAAcABUAAAAIAC0AAAAcABYAAAAIAC0AAAAcABcAAAAIAC0AAAAcABgAAAAIAC0AAAAcABkAAAAIAC0AAAAcABoAAAAIAC4AAAAdABMAAAAJACsAAAAdABQAAAAJAC0AAAAdABUAAAAJAC0AAAAdABYAAAAJAC0AAAAdABcAAAAJAC0AAAAdABgAAAAJAC0AAAAdABkAAAAJAC0AAAAdABoAAAAJAC4AAAAUABIAAAABACsAAAAVABIAAAACACsAAAAWABIAAAACACsAAAAXABIAAAACACsAAAAYABIAAAADACsAAAAUABMAAAABAC0AAAAUABUAAAABAC0AAAAUABYAAAABAC0AAAAUABcAAAABAC0AAAAUABgAAAABAC0AAAAUABoAAAABAC0AAAAUABsAAAABAC4AAAAVABsAAAACAC4AAAAWABsAAAACAC4AAAAXABsAAAACAC4AAAAYABsAAAADAC4AAAAYABoAAAADAC0AAAAYABgAAAADAC0AAAAYABcAAAADAC0AAAAYABYAAAADAC0AAAAYABUAAAADAC0AAAAYABMAAAADAC0AAAAVABMAAAACACwAAAAWABMAAAACACwAAAAXABMAAAACACwAAAAXABQAAAACACwAAAAXABUAAAACACwAAAAXABYAAAACACwAAAAXABcAAAACACwAAAAXABgAAAACACwAAAAXABkAAAACACwAAAAXABoAAAACACwAAAAWABoAAAACACwAAAAVABoAAAACACwAAAAVABkAAAACACwAAAAVABgAAAACACwAAAAVABcAAAACACwAAAAVABYAAAACACwAAAAVABUAAAACACwAAAAVABQAAAACACwAAAAWABQAAAACACwAAAAWABUAAAACACwAAAAWABYAAAACACwAAAAWABcAAAACACwAAAAWABgAAAACACwAAAAWABkAAAACACwAAAATABkAAAAFAC0AAAATABgAAAAFACsAAAATABQAAAAFAC0AAAATABMAAAAFACsAAAAaABQAAAAHACwAAAAaABkAAAAHACwAAAASABkAAAAJACwAAAASABQAAAAJACwAAAAUABQAAAABACwAAAAUABkAAAABACwAAAAYABkAAAADACwAAAAYABQAAAADACwAAAAZABkAAAAFAC0AAAAZABQAAAAFAC0AAAAZABgAAAAFACsAAAAZABMAAAAFACsAAAA=")

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(360, 360)

[node name="houses" parent="." instance=ExtResource("3_vvk7m")]
texture_filter = 1
tile_map_data = PackedByteArray("AAAQABcAAAABACgAAAAQABgAAAABACkAAAARABcAAAACACgAAAARABgAAAACACkAAAAbABcAAAAEACgAAAAcABcAAAAFACgAAAAbABIAAAAEACUAAAAcABIAAAAFACUAAAAQABIAAAABACUAAAARABIAAAACACUAAAAQABMAAAABACYAAAARABMAAAACACYAAAAbABMAAAAEACYAAAAcABMAAAAFACYAAAAbABgAAAAEACkAAAAcABgAAAAFACkAAAA=")

[node name="enter_pink_house" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enter_pink_house"]
position = Vector2(272, 392)
shape = SubResource("RectangleShape2D_mvhcb")

[node name="enter_purple_house" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enter_purple_house"]
position = Vector2(272, 311)
shape = SubResource("RectangleShape2D_c8et5")

[node name="enter_blue_house" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enter_blue_house"]
position = Vector2(448, 311)
shape = SubResource("RectangleShape2D_daanj")

[node name="enter_brown_house" type="Area2D" parent="."]
position = Vector2(448, 391)

[node name="CollisionShape2D" type="CollisionShape2D" parent="enter_brown_house"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_srjm5")

[node name="Mite1" type="Node2D" parent="."]
position = Vector2(344, 320)
script = ExtResource("4_xjjic")

[node name="mold_mite_1" parent="Mite1" instance=ExtResource("8_47f8w")]

[node name="Player" parent="." instance=ExtResource("4_cwj72")]
position = Vector2(360, 360)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(8, 8)

[node name="LED_SET_1" type="Node2D" parent="."]

[node name="LED_1" parent="LED_SET_1" instance=ExtResource("5_61rlc")]
position = Vector2(240, 308)
frame_progress = 0.0

[node name="LED_2" parent="LED_SET_1" instance=ExtResource("5_61rlc")]
position = Vector2(240, 316)

[node name="LED_3" parent="LED_SET_1" instance=ExtResource("5_61rlc")]
position = Vector2(240, 324)

[node name="LED_4" parent="LED_SET_1" instance=ExtResource("5_61rlc")]
position = Vector2(240, 332)

[node name="LED_SET_2" type="Node2D" parent="."]

[node name="LED_1" parent="LED_SET_2" instance=ExtResource("5_61rlc")]
position = Vector2(240, 340)
frame_progress = 0.0

[node name="LED_2" parent="LED_SET_2" instance=ExtResource("5_61rlc")]
position = Vector2(240, 348)

[node name="LED_3" parent="LED_SET_2" instance=ExtResource("5_61rlc")]
position = Vector2(240, 356)

[node name="LED_4" parent="LED_SET_2" instance=ExtResource("5_61rlc")]
position = Vector2(240, 364)

[node name="LED_SET_3" type="Node2D" parent="."]

[node name="LED_1" parent="LED_SET_3" instance=ExtResource("5_61rlc")]
position = Vector2(240, 372)
frame_progress = 0.0

[node name="LED_2" parent="LED_SET_3" instance=ExtResource("5_61rlc")]
position = Vector2(240, 380)

[node name="LED_3" parent="LED_SET_3" instance=ExtResource("5_61rlc")]
position = Vector2(240, 388)

[node name="LED_4" parent="LED_SET_3" instance=ExtResource("5_61rlc")]
position = Vector2(240, 396)

[node name="LED_SET_4" type="Node2D" parent="."]

[node name="LED_1" parent="LED_SET_4" instance=ExtResource("5_61rlc")]
position = Vector2(240, 404)
frame_progress = 0.0

[node name="LED_2" parent="LED_SET_4" instance=ExtResource("5_61rlc")]
position = Vector2(240, 412)

[node name="LED_3" parent="LED_SET_4" instance=ExtResource("5_61rlc")]
position = Vector2(240, 420)

[node name="LED_4" parent="LED_SET_4" instance=ExtResource("5_61rlc")]
position = Vector2(240, 428)

[node name="LED_SET_5" type="Node2D" parent="."]

[node name="LED_1" parent="LED_SET_5" instance=ExtResource("5_61rlc")]
position = Vector2(480, 308)
frame_progress = 0.0

[node name="LED_2" parent="LED_SET_5" instance=ExtResource("5_61rlc")]
position = Vector2(480, 316)

[node name="LED_3" parent="LED_SET_5" instance=ExtResource("5_61rlc")]
position = Vector2(480, 324)

[node name="LED_4" parent="LED_SET_5" instance=ExtResource("5_61rlc")]
position = Vector2(480, 332)

[node name="LED_SET_6" type="Node2D" parent="."]

[node name="LED_1" parent="LED_SET_6" instance=ExtResource("5_61rlc")]
position = Vector2(480, 340)
frame_progress = 0.0

[node name="LED_2" parent="LED_SET_6" instance=ExtResource("5_61rlc")]
position = Vector2(480, 348)

[node name="LED_3" parent="LED_SET_6" instance=ExtResource("5_61rlc")]
position = Vector2(480, 356)

[node name="LED_4" parent="LED_SET_6" instance=ExtResource("5_61rlc")]
position = Vector2(480, 364)

[node name="LED_SET_7" type="Node2D" parent="."]

[node name="LED_1" parent="LED_SET_7" instance=ExtResource("5_61rlc")]
position = Vector2(480, 372)
frame_progress = 0.0

[node name="LED_2" parent="LED_SET_7" instance=ExtResource("5_61rlc")]
position = Vector2(480, 380)

[node name="LED_3" parent="LED_SET_7" instance=ExtResource("5_61rlc")]
position = Vector2(480, 388)

[node name="LED_4" parent="LED_SET_7" instance=ExtResource("5_61rlc")]
position = Vector2(480, 396)

[node name="LED_SET_8" type="Node2D" parent="."]

[node name="LED_1" parent="LED_SET_8" instance=ExtResource("5_61rlc")]
position = Vector2(480, 404)
frame_progress = 0.0

[node name="LED_2" parent="LED_SET_8" instance=ExtResource("5_61rlc")]
position = Vector2(480, 412)

[node name="LED_3" parent="LED_SET_8" instance=ExtResource("5_61rlc")]
position = Vector2(480, 420)

[node name="LED_4" parent="LED_SET_8" instance=ExtResource("5_61rlc")]
position = Vector2(480, 428)

[node name="SceneTransitionRect" parent="." instance=ExtResource("6_n14ku")]
offset_left = -7.0
offset_top = 39.0
offset_right = -7.0
offset_bottom = 39.0

[node name="bgm" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_d6i20")
parameters/looping = true

[connection signal="body_entered" from="enter_pink_house" to="." method="_on_enter_pink_house_body_entered"]
[connection signal="body_entered" from="enter_purple_house" to="." method="_on_enter_purple_house_body_entered"]
[connection signal="body_entered" from="enter_blue_house" to="." method="_on_enter_blue_house_body_entered"]
[connection signal="body_entered" from="enter_brown_house" to="." method="_on_enter_brown_house_body_entered"]
[connection signal="mite_1_collide" from="Player" to="Mite1" method="_on_player_mite_1_collide"]
